--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ img:hover {
      width: 50%;
      padding: 20px;
      z-index: 1200;
-    background-color: greenyellow;
+    background-color: magenta;
   box-shadow: 0px 0px 42px 66px greenyellow;
     border-radius: 20px 20px 20px;
     color: black;
