--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ padding: 0;
     right: 5%;
     bottom: 10%;
     top: unset;
-     box-shadow: 0px 0px 22px 36px greenyellow;
+     box-shadow: 0px 0px 22px 36px magenta;
 	background-color:magenta;
     padding: 7px;
 	border-radius:40px;
